--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "avvika",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/local-auth": "^3.0.0",
+    "@googleapis/forms": "^2.0.5",
     "@types/fluent-ffmpeg": "^2.1.23",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -19,9 +22,11 @@
     "express": "^4.18.2",
     "fast-two-sms": "^3.0.0",
     "fluent-ffmpeg": "^2.1.2",
+    "googleapis": "^128.0.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.0",
+    "nodemailer": "^6.9.7",
     "sequelize": "^6.33.0",
     "sha256": "^0.2.0",
     "store": "^2.0.12",
